codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__interrupt_preserves_unified_exec_wait_streak.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: snapshot
---
cells=2
• Running just fix in background (Use down arrow to see details)


■ Conversation interrupted - tell the model what to do differently. Something went wrong? Hit `/feedback` to report the issue.
